# Smart_Tourist_Safety

./: .gitignore  README.md
backend/: .env.example  generate_csv.py  pyproject.toml
backend/app/: auth.py  config.py  database.py  main.py  schemas.py
backend/app/ml_models/: __init__.py  area_risk.py  crowd_density.py  inactivity.py  route_deviation.py
backend/app/ml_models/saved/: area_risk_model.pkl  inactivity_model.pkl  route_deviation_model.pkl
backend/app/models/: __init__.py  models.py
backend/app/routes/: __init__.py  auth.py  police.py  tourist.py  websocket.py
backend/app/services/: __init__.py  alert_engine.py  data_generator.py  websocket_manager.py
backend/data/: area_risk_data.csv  inactivity_data.csv  route_deviation_data.csv
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css
frontend/src/components/: Navbar.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: LoginPage.jsx  PoliceDashboard.jsx  RegisterPage.jsx  TouristPortal.jsx
